admin login completed

--- a/MobizoneApi/appsettings.json
+++ b/MobizoneApi/appsettings.json
@@ -9,7 +9,9 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=SUYCOKHWDSK233;Initial Catalog=ProjectMobile;Integrated security=true;"
+    "DefaultConnection": "Data Source=SQL8003.site4now.net;Initial Catalog=db_a86bb0_projectmobizon;User Id=db_a86bb0_projectmobizon_admin;Password=bibin@1998"
+
+
   },
 
   "JWT": {
